add metatag to enable "Add to home screen" on IOS devices
It makes easier access for IOS users and removes top section of normal browser.

--- a/modules/ui/static/index.html
+++ b/modules/ui/static/index.html
@@ -3,14 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-
-      <link rel="stylesheet" href="static/bootstrap.min.css">
+    <link rel="stylesheet" href="static/bootstrap.min.css">
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
     <link rel="stylesheet" href="static/bootstrap.dark.css">
-
-
-
+    <link rel="apple-touch-icon" href="/ui/static/logo.png" />
     <title>CraftBeerPi 3.0</title>
   </head>
   <body>
