--- a/modules/ui/static/index.html
+++ b/modules/ui/static/index.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="static/bootstrap.min.css">
-    <link rel="stylesheet" href="static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="static/bootstrap.dark.css">
-    <link rel="apple-touch-icon" href="/ui/static/logo.png" />
-    <title>CraftBeerPi 3.0</title>
-  </head>
-  <body>
-    <div id="root" ></div>
-    <script src="static/bundle.js" type="text/javascript"></script>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+  <link rel="stylesheet" href="static/bootstrap.min.css">
+  <link rel="stylesheet" href="static/css/font-awesome.min.css">
+  <link rel="stylesheet" href="static/bootstrap.dark.css">
+  <link rel="shortcut icon" href="static/favicon.ico">
+  <link rel="apple-touch-icon" href="/ui/static/logo.png" />
+  <title>CraftBeerPi 3.0</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="static/bundle.js" type="text/javascript"></script>
+</body>
+
 </html>
